--- a/css/styles.css
+++ b/css/styles.css
@@ -32,3 +32,64 @@ footer {
 footer p {
     margin-bottom: .25rem;
 }
+
+code {
+    color: #5fbb92;
+    font-size: 90%;
+}
+
+.container {
+    padding: 0;
+}
+
+.shadow-sm {
+    box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .035) !important;
+}
+
+.navbar-brand {
+    font-size: 2.8rem;
+}
+
+.card-header {
+    border: 0;
+    background-color: white;
+}
+
+.card {
+    border: 0;
+    font-weight: 300;
+}
+
+.card-header {
+    padding-bottom: 0;
+}
+
+.bg-light {
+    background-color: #f9f9f9 !important;
+}
+
+.github-corner:hover .octo-arm {
+    animation: octocat-wave 560ms ease-in-out
+}
+
+@keyframes octocat-wave {
+    0%, 100% {
+        transform: rotate(0)
+    }
+    20%, 60% {
+        transform: rotate(-25deg)
+    }
+    40%, 80% {
+        transform: rotate(10deg)
+    }
+}
+
+@media (max-width: 500px) {
+    .github-corner:hover .octo-arm {
+        animation: none
+    }
+
+    .github-corner .octo-arm {
+        animation: octocat-wave 560ms ease-in-out
+    }
+}
