--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,115 @@ main {
     flex-grow: 1;
 }
 
+pre[class*="language-"],
+code[class*="language-"] {
+    font-size: 12px;
+}
+
+.code-title {
+    text-align: center;
+}
+
+.example {
+    padding: 80px 30px;
+}
+
+.row.equal-cols {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+.row-with-switch, .row.equal-cols {
+    padding: 20px 0;
+}
+
+.row.equal-cols:before,
+.row.equal-cols:after {
+    display: block;
+}
+
+.row.equal-cols>[class*='col-'] {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+}
+
+.row.equal-cols>[class*='col-'] > pre {
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+}
+
+.toggle:checked ~ .row > .dev {
+    display: none !important;
+}
+
+.toggle:checked ~ .row > .prod {
+    display: flex !important;
+}
+
+.prod {
+    display: none !important;
+}
+
+.toggle {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+    margin: 10px 0 0 20px;
+}
+
+.toggle + label {
+    position: relative;
+    padding: 0 0 0 60px;
+    cursor: pointer;
+}
+
+.toggle+label:before {
+    content: '';
+    position: absolute;
+    top: 4px;
+    left: 0;
+    width: 50px;
+    height: 26px;
+    border-radius: 13px;
+    background: #CDD1DA;
+    box-shadow: inset 0 2px 3px rgba(0, 0, 0, .2);
+    transition: .2s;
+}
+
+.toggle+label:after {
+    content: '';
+    position: absolute;
+    top: 5px;
+    left: 2px;
+    width: 22px;
+    height: 22px;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
+    transition: .2s;
+}
+
+.toggle:checked + label:before {
+    background: #5fbb92;
+}
+
+.toggle:checked + label:after {
+    left: 26px;
+}
+
+.toggle:focus+label:before {
+    box-shadow: inset 0 2px 3px rgba(0, 0, 0, .2), 0 0 0 3px rgba(95, 187, 146, .2);
+}
+
 /*@media (max-width: 767px) {*/
 /*    header .navbar .container {*/
 /*        align-items: unset;*/
