--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,7 @@ code[class*="language-"] {
 .row-with-switch {
     background: linear-gradient(#e1ebec, #e2ecee);
     border-radius: 10px;
-    padding: 20px;
+    padding: 15.5px 20px;
     margin: 20px 0;
 }
 
