--- a/css/styles.css
+++ b/css/styles.css
@@ -163,7 +163,7 @@ code[class*="language-"] {
 }
 
 .row-with-switch {
-    background: #f0f6f7;
+    background: #f2fafb;
     padding: 15.5px 20px;
     margin: 20px 0;
 }
