--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
+:root {
+    --light-grey: #f5f5f5;
+    --dark: #2b2d38;
+    --blue: #02afdd;
+    --green: #79c357;
+    --green01: #5fbb92;
+}
+
 .mc-blue {
     color: #02afdd !important;
 }
@@ -222,10 +230,17 @@ code[class*="language-"] {
     margin: 10px 0 0 20px;
 }
 
+.row-with-switch > label:first-of-type {
+    color: var(--blue);
+    font-weight: 500;
+}
+
 .toggle + label, .toggle-mix-row + label {
     position: relative;
     padding: 0 0 0 60px;
     cursor: pointer;
+    color: var(--green);
+    font-weight: 500;
 }
 
 .toggle+label:before, .toggle-mix-row+label:before {
@@ -236,7 +251,7 @@ code[class*="language-"] {
     width: 50px;
     height: 26px;
     border-radius: 13px;
-    background: #CDD1DA;
+    background: var(--blue);
     box-shadow: inset 0 2px 3px rgba(0, 0, 0, .2);
     transition: .2s;
 }
@@ -255,7 +270,7 @@ code[class*="language-"] {
 }
 
 .toggle:checked + label:before, .toggle-mix-row:checked + label:before {
-    background: #5fbb92;
+    background: var(--green);
 }
 
 .toggle:checked + label:after, .toggle-mix-row:checked + label:after {
